feat: Add Igbo tribe section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="#festival-section">Festivals</a>
         </li>
         <li>
-          <a href="igbo.html">Igbo Tribe</a>
+          <a href="#igbo-section">Igbo Tribe</a>
         </li>
       </ul>
     </nav>
@@ -215,21 +215,45 @@
       <div class="videoitem">
         <hr class="image-intro-line">
         <!-- Courtesy of https://www.youtube.com/watch?v=ZrPPYXIdAZg -->
-        <iframe  src="https://www.youtube.com/embed/ZrPPYXIdAZg" title="YouTube video player"
-          frameborder="0"
+        <iframe src="https://www.youtube.com/embed/ZrPPYXIdAZg" title="YouTube video player" frameborder="0"
           allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
-          <p>Igbo people at Enugu State, South Eastern Nigeria celebrating the new yam festival in grand style.</p>
+        <p>Igbo people at Enugu State, South Eastern Nigeria celebrating the new yam festival in grand style.</p>
       </div>
-      
 
+
+    </section>
+    <section id="igbo-section">
+      <h2>Who are the Igbos that Celebrate Yam Festivals</h2>
+      <hr class="full-line">
+      <div class="igbo-item">
+        <hr class="image-intro-line">
+        <!-- adopted from the YouTube video -->
+        <iframe src="https://www.youtube.com/embed/Jr82EvHiKyU" title="An Igbo History" frameborder="0"
+          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        <p>The video above is someones account of the an aspect of the history of the Igbo. Enjoy watching.</p>
+      </div>
+      <div class="igbo-item">
+        <hr class="image-intro-line">
+        <p>Igbos are found in the South Eastern part of Nigeria. A description of the Igbos given by Britannica.com is
+          well apt and sumarised below: Most Igbo traditionally have been subsistence farmers, their staples being yams,
+          cassava, and taro. The other crops they grow include corn (maize), melons, okra, pumpkins, and beans. Among
+          those still engaged in agriculture, men are chiefly responsible for yam cultivation, women for other crops.
+          Land is owned communally by kinship groups and is made available to individuals for farming and building. Some
+          livestock, important as a source of prestige and for use in sacrifices, is kept. The principal exports are
+          palm oil and palm kernels. Trading, local crafts, and wage labour also are important in the Igbo economy, and
+          a high literacy rate has helped many Igbo to become civil servants and business entrepreneurs in the decades
+          after Nigeria gained independence. It is notable that Igbo women engage in trade and are influential in local
+          politics.</p>
+      </div>
     </section>
   </main>
   <footer>
     <div class="footer-menu">
       <span><a href="index.html" class="selected">Home</a></span>
       <span class="footer-link">
-        <a href="igbo-tribe.html">Igbo Tribe</a>
+        <a href="#igbo-section">Igbo Tribe</a>
       </span>
       <span class="footer-link">
         <a href="#festival-section">Festivals</a>
