Modify image css to accomodate small screens better

--- a/index.html
+++ b/index.html
@@ -180,10 +180,9 @@
 
       <div class="videoitem">
         <hr class="image-intro-line">
-
-        <video src="assets/videos/yam_festival1.mp4" controls>
-          <p class="video-intro-text">video on celebrating new yam festival: Your browser doesn't support HTML5
-            video</p>
+        <video src="assets/videos/yam_festival1.mp4" controls autoplay muted>
+          <p class="video-intro-text">video on celebrating new yam festival: Your browser doesn't support HTML5 Video
+          </p> 
         </video>
         <p>Celebrating new yam festival in Igbo land. The Eze (Traditional Ruler) of the community performs the ritual
           of
@@ -191,15 +190,15 @@
           of
           yams for the harvest season.</p>
         <a href="https://www.youtube.com/watch?v=awBHeFO3228" target="_blank" rel="noopener"
-          aria-label="Watch the full video on youtube"> You may watch the full video on YouTube <i
-            class="fab fa-youtube"></i> at this address.
+          aria-label="Watch the full video on youtube"> You may watch the full video on YouTube 
+          <i class="fab fa-youtube"></i> at this address.
         </a>
       </div>
 
       <div class="videoitem">
         <hr class="image-intro-line">
 
-        <video src="assets/videos/yam_festival2.mp4" controls loop title="DANCE DANCE">
+        <video src="assets/videos/yam_festival2.mp4" controls autoplay muted loop title="DANCE DANCE">
           <p>Second video on celebrating new yam festival: Your browser doesn't support HTML5 video</p>
         </video>
         <p>
@@ -215,7 +214,7 @@
       <div class="videoitem">
         <hr class="image-intro-line">
         <!-- Courtesy of https://www.youtube.com/watch?v=ZrPPYXIdAZg -->
-        <iframe src="https://www.youtube.com/embed/ZrPPYXIdAZg" title="YouTube video player" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/ZrPPYXIdAZg" title="YouTube video player" 
           allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
         <p>Igbo people at Enugu State, South Eastern Nigeria celebrating the new yam festival in grand style.</p>
@@ -229,7 +228,7 @@
       <div class="igbo-item">
         <hr class="image-intro-line">
         <!-- adopted from the YouTube video -->
-        <iframe src="https://www.youtube.com/embed/Jr82EvHiKyU" title="An Igbo History" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/Jr82EvHiKyU" title="An Igbo History"
           allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
         <p>The video above is someones account of the an aspect of the history of the Igbo. Enjoy watching.</p>
