--- a/index.html
+++ b/index.html
@@ -180,8 +180,10 @@
 
       <div class="videoitem">
         <hr class="image-intro-line">
-        <video src="assets/videos/yam_festival1.mp4" controls autoplay muted>
-          <p class="video-intro-text">video on celebrating new yam festival: Your browser doesn't support HTML5 Video
+        <video  controls>
+          <source src="assets/videos/yam_festival1.mp4" type="video/mp4">
+          <!-- <source src="assets/videos/yam_festival1.mov" type="video/mov"> -->
+          <p>video on celebrating new yam festival: Your browser doesn't support HTML5 Video
           </p> 
         </video>
         <p>Celebrating new yam festival in Igbo land. The Eze (Traditional Ruler) of the community performs the ritual
@@ -198,7 +200,7 @@
       <div class="videoitem">
         <hr class="image-intro-line">
 
-        <video src="assets/videos/yam_festival2.mp4" controls autoplay muted loop title="DANCE DANCE">
+        <video src="assets/videos/yam_festival2.mp4"  type="video/mp4" controls loop title="DANCE DANCE">
           <p>Second video on celebrating new yam festival: Your browser doesn't support HTML5 video</p>
         </video>
         <p>
