fix: corrected 2 errors on the CSS stylesheet after W3c validation

--- a/index.html
+++ b/index.html
@@ -180,27 +180,29 @@
 
       <div class="videoitem">
         <hr class="image-intro-line">
-        <video  controls>
+        <video controls>
           <source src="assets/videos/yam_festival1.mp4" type="video/mp4">
           <!-- <source src="assets/videos/yam_festival1.mov" type="video/mov"> -->
           <p>video on celebrating new yam festival: Your browser doesn't support HTML5 Video
-          </p> 
+          </p>
         </video>
         <p>Celebrating new yam festival in Igbo land. The Eze (Traditional Ruler) of the community performs the ritual
           of
           being the first to cut and eat the new yam. After that, members of the community could partake of the eating
           of
           yams for the harvest season.</p>
-        <a href="https://www.youtube.com/watch?v=awBHeFO3228" target="_blank" rel="noopener"
-          aria-label="Watch the full video on youtube"> You may watch the full video on YouTube 
-          <i class="fab fa-youtube"></i> at this address.
-        </a>
+        
+          <a href="https://www.youtube.com/watch?v=awBHeFO3228" target="_blank" rel="noopener"
+            aria-label="Watch the full video on youtube">You may watch the full video on YouTube
+            <i class="fab fa-youtube"></i> by clicking here. 
+          </a>
+       
       </div>
 
       <div class="videoitem">
         <hr class="image-intro-line">
-
-        <video src="assets/videos/yam_festival2.mp4"  type="video/mp4" controls loop title="DANCE DANCE">
+        <video  controls loop autoplay mute>
+          <source src="assets/videos/yam_festival2.mp4" type="video/mp4">
           <p>Second video on celebrating new yam festival: Your browser doesn't support HTML5 video</p>
         </video>
         <p>
@@ -216,7 +218,7 @@
       <div class="videoitem">
         <hr class="image-intro-line">
         <!-- Courtesy of https://www.youtube.com/watch?v=ZrPPYXIdAZg -->
-        <iframe src="https://www.youtube.com/embed/ZrPPYXIdAZg" title="YouTube video player" 
+        <iframe src="https://www.youtube.com/embed/ZrPPYXIdAZg" title="YouTube video player"
           allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
         <p>Igbo people at Enugu State, South Eastern Nigeria celebrating the new yam festival in grand style.</p>
@@ -233,7 +235,7 @@
         <iframe src="https://www.youtube.com/embed/Jr82EvHiKyU" title="An Igbo History"
           allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
-        <p>The video above is someones account of the an aspect of the history of the Igbo. Enjoy watching.</p>
+        <p>The video above is an account of the an aspect of the history of the Igbo. Enjoy watching.</p>
       </div>
       <div class="igbo-item">
         <hr class="image-intro-line">
