Add README.md content

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </div> -->
     </section>
     <section id="festival-section">
-      <h2>Celebration Events in Video and Images</h2>
+      <h2>Celebration Events in Video</h2>
       <hr class="full-line">
 
       <div class="videoitem">
