--- a/index.html
+++ b/index.html
@@ -220,13 +220,9 @@
       <div class="videoitem">
         <hr class="image-intro-line">
         <!-- Courtesy of https://www.youtube.com/watch?v=ZrPPYXIdAZg -->
-        <iframe src="https://www.youtube.com/embed/ZrPPYXIdAZg" title="YouTube video player"
-          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/ZrPPYXIdAZg" title="YouTube video player" allowfullscreen></iframe>
         <p>Igbo people at Enugu State, South Eastern Nigeria celebrating the new yam festival in grand style.</p>
       </div>
-
-
     </section>
     <section id="igbo-section">
       <h2>Who are the Igbos that Celebrate Yam Festivals</h2>
@@ -234,9 +230,7 @@
       <div class="igbo-item">
         <hr class="image-intro-line">
         <!-- adopted from the YouTube video -->
-        <iframe src="https://www.youtube.com/embed/Jr82EvHiKyU" title="An Igbo History"
-          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/Jr82EvHiKyU" title="An Igbo History" allowfullscreen></iframe>
         <p>The video above is an account of the an aspect of the history of the Igbo. Enjoy watching.</p>
       </div>
       <div class="igbo-item">
@@ -287,5 +281,4 @@
   <script src="https://kit.fontawesome.com/af901081da.js" crossorigin="anonymous">
   </script>
 </body>
-
 </html>
