Redesigned the History section into two alternating columns of text and image

--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
       </div>
     </section>
     <section id="yam-intro">
-      <div>
+      <!-- <div>
         <h2>What is Yam</h2>
         <hr class="full-line">
-      </div>
+      </div> -->
       <div class="text-div">
+        <h2>What is Yam</h2>
+        <hr class="full-line">
         <p>
           Yam is among the edible tubers Yams are perennial herbaceous vines
           cultivated for the consumption of their starchy tubers in many
@@ -57,7 +59,23 @@
         </p>
       </div>
       <div class="text-div">
-        <h2>History of Yam Festivals</h2>
+        <figure>
+          <img src="assets/images/yam.webp" alt="yam" />
+          <figcaption class="caption">Harvested yam (https://www.iita.org/test-yam/)
+          </figcaption>
+        </figure>
+      </div>
+      <div class="text-div">
+        <figure>
+          <img src="assets/images/ibeku_people.webp" alt="yam" />
+          <figcaption class="caption">
+            Ibeku ancient kingdom in Umuahia North Local Government Area of Abia
+            state, celebrating 2021 new yam festival
+          </figcaption>
+        </figure>
+      </div>
+      <div class="text-div">
+        <h2>Mythology of Yam Festivals</h2>
         <hr class="full-line">
         <p>
           Once upon a time, a severe famine struck an unnamed Igbo land. Plants
@@ -73,7 +91,10 @@
           mythology, the yam deity is a goddess called Ahia Njoku. Njoku is
           represented by the yam barns, with an effigy and a shrine.
         </p>
-        <br />
+      </div>
+      <div class="text-div">
+        <h2>History of Yam Festivals</h2>
+        <hr class="full-line">
         <p>
           Yams are the first crops to be harvested and are therefore the most
           important in Igbo land. Igbo people are agrarian by nature and so yam
@@ -90,21 +111,29 @@
           evidence of a good life with accomplishments.
         </p>
       </div>
-    </section>
-    <section class="image-gallery">
-      <!-- <div class="pictures"> -->
-      <h2>Gallery of Yam and Celebrations</h2>
-      <hr class="full-line">
-      <div class="image" id="gallery-1">
-        <hr class="image-intro-line">
-        <img src="assets/images/yam2.webp" alt="yam" />
-        <div class="caption">
-          Colorful dances depicting the mood of the celebration of yam</div>
+      <div class="text-div">
+        <figure>
+          <img src="assets/images/newyam-Igbo-dublin.jpg" alt="New Yam Festival Igbo People in Dublin" />
+          <figcaption class="caption">Igbo People in Dublin Celebrating New Yam Festival
+            <a href="https://en.wikipedia.org/wiki/New_Yam_Festival_of_the_Igbo#/media/File:NewYam-IgboFestival-Dublin.jpg "
+              target="_blank" rel="noopener">(Wikipedia)</a>
+          </figcaption>
+        </figure>
       </div>
-      <div class="image" id="gallery-2">
-        <hr class="image-intro-line">
-        <img src="assets/images/yam_celeb.webp" alt="yam" />
-        <div class = "caption">
+
+      <div class="text-div">
+        <figure>
+          <img src="assets/images/igboukwu_new_yam_festival.webp" alt="Igbo Ukwu New Yam Festival" />
+          <figcaption class="caption">Igbo-Ukwu people in Aguata Local Government Area of Anambra state Nigeria celebrating the New Yam Festival.
+            <a href="https://www.makeheritagefun.com/new-yam-igbo/ "
+              target="_blank" rel="noopener">(Make Heritage Fun)</a>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="text-div">
+        <h2>When is the Festival</h2>
+        <hr class="full-line">
+        <p>
           The New Yam Festival is an annual tradition observed by the Igbo
           People of Eastern Nigeria. In some Igbo communities, the celebration
           lasts a day but in some other communities, it usually takes a week.
@@ -112,42 +141,76 @@
           yam as the king of all crops. To depict its prominence, The Igbos
           observe this festival to thank the gods for a good harvest. At
           Mbaise in Imo State it is celebrated on the 15 August of every year.
-        </div>
+        </p>
       </div>
+
+
+    </section>
+    <section class="image-gallery">
+      <!-- <div class="pictures"> -->
+      <h2>Gallery of Yam and Celebrations</h2>
+      <hr class="full-line">
+      <div class="image" id="gallery-1">
+        <hr class="image-intro-line">
+        <figure>
+          <img src="assets/images/yam2.webp" alt="yam" />
+          <figcaption class="caption">Colorful dances depicting the mood of the celebration
+            of yam</figcaption>
+        </figure>
+      </div>
+      <!--        
+        <div class="caption">
+          Colorful dances depicting the mood of the celebration of yam</div>
+      </div> -->
+
       <div class="image" id="gallery-3">
         <hr class="image-intro-line">
-        <img src="assets/images/yam_plant.webp" alt="yam" />
-        <div class = "caption">
-          Yams are grown vertically on sticks in the field. The tubers are
-          harvested by digging them out of the soil beneath the plants at the
-          end of the planting season
-        </div>
+        <figure>
+          <img src="assets/images/yam_plant.webp" alt="yam" />
+          <figcaption class="caption">
+            Yams are grown vertically on sticks in the field. The tubers are
+            harvested by digging them out of the soil beneath the plants at the
+            end of the planting season
+          </figcaption>
+        </figure>
       </div>
 
 
       <div class="image" id="gallery-4">
         <hr class="image-intro-line">
-        <img src="assets/images/igbo_ukwu.webp" alt="yam" />
-        <div class = "caption">
-          The Igboukwu festival is celebrated yearly by the indigenous
-          communities of Igboukwu in Aguata Local Government Area of Anambra
-          state, Nigeria. It a fun-filled celebration with lot displays of
-          elegance and masquerades and many other cultural displays take
-          place.
-        </div>
+        <figure>
+          <img src="assets/images/igbo_ukwu.webp" alt="yam" />
+          <figcaption class="caption">
+            The Igboukwu festival is celebrated yearly by the indigenous
+            communities of Igboukwu in Aguata Local Government Area of Anambra
+            state, Nigeria. It a fun-filled celebration with lot displays of
+            elegance and masquerades and many other cultural displays take
+            place.
+          </figcaption>
+        </figure>
       </div>
       <div class="image" id="gallery-5">
         <hr class="image-intro-line">
-        <img src="assets/images/yam_stick.webp" alt="yam" />
-        <div class="caption">Local storage of yams on sticks awating another planting season</div>
+        <figure>
+          <img src="assets/images/yam_stick.webp" alt="yam" />
+          <figcaption class="caption">Local storage of yams on sticks awating another planting season</figcaption>
+        </figure>
       </div>
       <div class="image" id="gallery-6">
         <hr class="image-intro-line">
-        <img src="assets/images/ibeku_people.webp" alt="yam" />
-        <div class = "caption">
-          Ibeku ancient kingdom in Umuahia North Local Government Area of Abia
-          state, celebrating 2021 new yam festival in a joyous mood
-        </div>
+        <figure>
+          <img src="assets/images/igbo_ghana_yam.webp" alt="yam" />
+          <figcaption class="caption">
+            Igbo tribe in Ghana, West Africa celebrate New Yam Festival on 19
+            September, 2021. The event enabled Igbo people to come together to
+            thank God for a fruitful farm season. The showcased the rich Igbo
+            culture and cuisine to the world. The yam on the table was roasted and
+            could be eaten with palm oil and fresh herbs or stew or any soup as
+            the person deems necessary. (<a
+              href="https://gazettengr.com/igbos-in-ghana-to-celebrate-new-yam-festival/ " target="_blank"
+              rel="noopener">Courtesy of Gazettengr</a>)
+          </figcaption>
+        </figure>
       </div>
 
       <!-- <div class="image-column">
@@ -183,7 +246,7 @@
         <hr class="image-intro-line">
         <!-- auto play was added after testing on iPhone. It enables a beautiful screen of the video 
           to be visible but still wont play until the user clicks on it which is the desired outcome -->
-        <video controls autoplay mute>
+        <video controls>
           <source src="assets/videos/yam_festival1.mp4" type="video/mp4">
           <!-- <source src="assets/videos/yam_festival1.mov" type="video/mov"> -->
           <p>video on celebrating new yam festival: Your browser doesn't support HTML5 Video
@@ -204,7 +267,7 @@
 
       <div class="videoitem">
         <hr class="image-intro-line">
-        <video controls loop autoplay mute>
+        <video controls loop>
           <source src="assets/videos/yam_festival2.mp4" type="video/mp4">
           <p>Second video on celebrating new yam festival: Your browser doesn't support HTML5 video</p>
         </video>
@@ -241,7 +304,8 @@
           cassava, and taro. The other crops they grow include corn (maize), melons, okra, pumpkins, and beans. Among
           those still engaged in agriculture, men are chiefly responsible for yam cultivation, women for other crops.
           Land is owned communally by kinship groups and is made available to individuals for farming and building. Some
-          livestock, important as a source of prestige and for use in sacrifices, is kept. The principal exports are
+          livestock, important as a source of prestige and for use in sacrifices, is kept.
+          <br><br>The principal exports are
           palm oil and palm kernels. Trading, local crafts, and wage labour also are important in the Igbo economy, and
           a high literacy rate has helped many Igbo to become civil servants and business entrepreneurs in the decades
           after Nigeria gained independence. It is notable that Igbo women engage in trade and are influential in local
@@ -266,7 +330,7 @@
         Contact Us:
         <a href="https://www.facebook.com/polycarp.anyanwu" target="_blank" rel="noopener"
           aria-label="Check us out on Facebook">
-          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-facebook"></i>
         </a>
         <a href="https://github.com/Polyanyanwu" target="_blank" rel="noopener" aria-label="Check us out on Github"><i
             class="fab fa-github"></i></a>
@@ -282,4 +346,5 @@
   <script src="https://kit.fontawesome.com/af901081da.js" crossorigin="anonymous">
   </script>
 </body>
+
 </html>
