Modified the media queries to be in tune with the slight design change

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>What is Yam</h2>
         <hr class="full-line">
       </div> -->
-      <div class="text-div">
+      <div class="history-div">
         <h2>What is Yam</h2>
         <hr class="full-line">
         <p>
@@ -58,14 +58,14 @@
           eastern part of Nigeria where they are regarded as the king of crops.
         </p>
       </div>
-      <div class="text-div">
+      <div class="history-div">
         <figure>
           <img src="assets/images/yam.webp" alt="yam" />
           <figcaption class="caption">Harvested yam (https://www.iita.org/test-yam/)
           </figcaption>
         </figure>
       </div>
-      <div class="text-div">
+      <div class="history-div">
         <figure>
           <img src="assets/images/ibeku_people.webp" alt="yam" />
           <figcaption class="caption">
@@ -74,7 +74,7 @@
           </figcaption>
         </figure>
       </div>
-      <div class="text-div">
+      <div class="history-div">
         <h2>Mythology of Yam Festivals</h2>
         <hr class="full-line">
         <p>
@@ -92,7 +92,7 @@
           represented by the yam barns, with an effigy and a shrine.
         </p>
       </div>
-      <div class="text-div">
+      <div class="history-div">
         <h2>History of Yam Festivals</h2>
         <hr class="full-line">
         <p>
@@ -111,7 +111,7 @@
           evidence of a good life with accomplishments.
         </p>
       </div>
-      <div class="text-div">
+      <div class="history-div">
         <figure>
           <img src="assets/images/newyam-Igbo-dublin.jpg" alt="New Yam Festival Igbo People in Dublin" />
           <figcaption class="caption">Igbo People in Dublin Celebrating New Yam Festival
@@ -121,7 +121,7 @@
         </figure>
       </div>
 
-      <div class="text-div">
+      <div class="history-div">
         <figure>
           <img src="assets/images/igboukwu_new_yam_festival.webp" alt="Igbo Ukwu New Yam Festival" />
           <figcaption class="caption">Igbo-Ukwu people in Aguata Local Government Area of Anambra state Nigeria celebrating the New Yam Festival.
@@ -130,7 +130,7 @@
           </figcaption>
         </figure>
       </div>
-      <div class="text-div">
+      <div class="history-div">
         <h2>When is the Festival</h2>
         <hr class="full-line">
         <p>
