--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@
       <div class="history-div">
         <figure>
           <img src="assets/images/igboukwu_new_yam_festival.webp" alt="Igbo Ukwu New Yam Festival" />
-          <figcaption class="caption">Igbo-Ukwu people in Aguata Local Government Area of Anambra state Nigeria celebrating the New Yam Festival.
-            <a href="https://www.makeheritagefun.com/new-yam-igbo/ "
-              target="_blank" rel="noopener">(Make Heritage Fun)</a>
+          <figcaption class="caption">Igbo-Ukwu people in Aguata Local Government Area of Anambra state Nigeria
+            celebrating the New Yam Festival.
+            <a href="https://www.makeheritagefun.com/new-yam-igbo/ " target="_blank" rel="noopener">(Make Heritage
+              Fun)</a>
           </figcaption>
         </figure>
       </div>
@@ -206,9 +207,8 @@
             thank God for a fruitful farm season. The showcased the rich Igbo
             culture and cuisine to the world. The yam on the table was roasted and
             could be eaten with palm oil and fresh herbs or stew or any soup as
-            the person deems necessary. (<a
-              href="https://gazettengr.com/igbos-in-ghana-to-celebrate-new-yam-festival/ " target="_blank"
-              rel="noopener">Courtesy of Gazettengr</a>)
+            the person deems necessary. (<a href="https://gazettengr.com/igbos-in-ghana-to-celebrate-new-yam-festival/ "
+              target="_blank" rel="noopener">Courtesy of Gazettengr</a>)
           </figcaption>
         </figure>
       </div>
