Fix font awesome showing undersline beside the icon

--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
         Contact Us:
         <a href="https://www.facebook.com/polycarp.anyanwu" target="_blank" rel="noopener"
           aria-label="Check us out on Facebook">
-          <i class="fab fa-facebook"></i>
+          <i class="fab fa-facebook-square"></i>
         </a>
         <a href="https://github.com/Polyanyanwu" target="_blank" rel="noopener" aria-label="Check us out on Github"><i
-            class="fab fa-github"></i></a>
+            class="fab fa-github-square"></i></a>
         <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Check us out on Twitter"> <i
-            class="fab fa-twitter"></i></a>
+            class="fab fa-twitter-square"></i></a>
         <a href="http://linkedin.com/in/polycarp-anyanwu-pmp-a4265a11" target="_blank" rel="noopener"
           aria-label="Check us out on LinkedIn">
           <i class="fab fa-linkedin"></i>
