Add Deployment and Credits for README

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
           America and the Caribbean, Asia, and Oceania (Wikipedia). There are
           various species of yams. Yams are particularly celebrated in the
           eastern part of Nigeria where they are regarded as the king of crops.
+          Yams are reported to be an excellent source of fibre, high in potassium and manganese, which are important for supporting
+          bone health, growth, metabolism, and heart function.
         </p>
       </div>
       <div class="history-div">
@@ -80,7 +82,7 @@
           Yams are grown vertically on sticks in the field. The tubers are
           harvested by digging them out of the soil beneath the plants at the
           end of the planting season. Staking is a method of elevating creeping vines above ground level by means of
-          supporting structures(Ogidi Farms).
+          supporting structures(Ogidi Olu Farms).
         </p>
         <p>
           Yams are staked before vines start crawling on the ground. The recommended stake length is one to two meters
@@ -103,7 +105,7 @@
           famine. It is believed this Eze Nri’s dead son is the god of yam,
           Ahijoku, and Ada, his daughter was the cocoyam. Sometimes in Igbo
           mythology, the yam deity is a goddess called Ahia Njoku. Njoku is
-          represented by the yam barns, with an effigy and a shrine.
+          represented by the yam barns, with an effigy and a shrine (medium.com).
         </p>
       </div>
       <div class="history-div">
@@ -115,10 +117,6 @@
           </figcaption>
         </figure>
       </div>
-
-
-
-
       <div class="history-div">
         <h2>History of Yam Festivals</h2>
         <hr class="full-line">
@@ -147,7 +145,6 @@
           </figcaption>
         </figure>
       </div>
-
       <div class="history-div">
         <figure>
           <img src="assets/images/igboukwu_new_yam_festival.webp" alt="Igbo Ukwu New Yam Festival" />
@@ -171,8 +168,6 @@
           Mbaise in Imo State it is celebrated on the 15 August of every year.
         </p>
       </div>
-
-
     </section>
     <!-- Yam Festival Celebrations captured in pictures -->
     <section id="image-gallery">
