--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="author" content="Polycarp Anyanwu" />
   <meta name="description" content="History of New Yam Festival among the Igbo Tribe of Eastern Nigeria" />
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="icon" type="image/png" href="favicon.png"/>
   <title>New Yam Festival</title>
 </head>
 
@@ -245,7 +246,7 @@
       <hr class="full-line">
       <div class="videoitem">
         <hr class="image-intro-line">
-        <video controls>
+        <video controls autoplay mute>
           <source src="assets/videos/yam_festival1.mp4" type="video/mp4">
           <p>video on celebrating new yam festival: Your browser doesn't support HTML5 Video
           </p>
@@ -261,7 +262,7 @@
       </div>
       <div class="videoitem">
         <hr class="image-intro-line">
-        <video controls loop>
+        <video controls loop autoplay mute>
           <source src="assets/videos/yam_festival2.mp4" type="video/mp4">
           <p>Second video on celebrating new yam festival: Your browser doesn't support HTML5 video</p>
         </video>
